2001-04-06  Jeff Freedman  <jeff@amy.nerble.net>

	* Put deleted monsters in a table for later actual deletion.
	Appears to fix the teleport bug.

2001-04-04  Jeff Freedman  <jeff@amy.nerble.net>

	* Lots of changes to Patrol schedule.  It always uses pathfinding
	now, and uses quality for Usecode test in SI.
	* Fixed ship rotation in SI.
	* Set 'killable' for all monsters when they're created.

2001-04-04  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/quotes.txt: new quote
	* gumps/Paperdoll_gump_info.cc: use correct fellowship amulet shape

2001-04-03  Jeff Freedman  <jeff@amy.nerble.net>

	* Ship is starting to work, but not reliably, and with much bugginess.

2001-04-02  Jeff Freedman  <jeff@amy.nerble.net>

	* Scheduled usecode:  Figured out opcode 0x01.  Fixes drawbridge
	animation.
	* Draw weapons with translucency if necessary.	

2001-04-02  Ryan Nunn <triforce@merlin.net.au>
	* actor*.*: Also fixed rare bug that would occur when saving and a NPC
	  that had it's activity set to 'move to schedule'. Using S-Vr and Acty
	  save fields to do this.
	* gamewin.*, readnpcs.cc, usecode/*: Added SI Intrinsic 0xb4 Revert
	  Schedules. I also changed paint() to set_all_dirty() is
	  Game_window::center_view. center_view is also now called twice in
	  Game_window::read_npcs.
	* cheat_screen.cc: Added 'revert' to cheat screen schedule changer.
	  Also prevented setting schedules on monster npc's.

2001-04-01  Jeff Freedman  <jeff@amy.nerble.net>

	* Rendering-order changes.

2001-03-31  Jeff Freedman  <jeff@amy.nerble.net>

	* SI - Bug fixes for fighting on List Field.

2001-03-30  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/bg/fellowshipstaff.shp: my attempt at a fellowship staff
	* data/bg/flx.in, gump/Paperdoll_gump_info.cc, Makefile.*: added art
	* docs/art.txt: list of needed/done art for paperdolls

2001-03-30  Tristan Tarrant <nadir@users.sourceforge.net>

	* data/quotes.txt: New quote from Jeff

2001-03-30  Jeff Freedman  <jeff@amy.nerble.net>